Fixed block spacing with flexbox

--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ nav ul {
 .right{
     margin-left: auto;
     font-size: 20px;
+    color: #3d4e36;
+
+
 }
 
 nav li {
@@ -23,6 +26,8 @@ nav{
     border-bottom: 5px lightgray;
     box-shadow: 0px 4px 6px -2px rgba(0, 0, 0, 0.05);
     padding-bottom: 5px;
+    position: sticky;
+    top: 0;
 }
 
 nav a{
@@ -32,20 +37,22 @@ nav a{
     border-radius: 10px;
     font-family: 'Playfair Display', serif;
     font-weight: 500;
-    font-size: 20px 
+    font-size: 20px; 
+    position: sticky;
+    top: 0;
 }
 
 
 
 body{
-    color: black;
+    color: #FDF7F2;
     font-family: 'Playfair Display', serif;
     font-weight: 500;
-    background-color: #FDF7F2; 
+    background-color: #fdf7f2; 
 }
 
 nav a:hover{
-    color: #4f351c    
+    color: #4f351c;    
 }
 
 #home {
@@ -54,6 +61,7 @@ nav a:hover{
     text-align: left;
     display: block;
 }
+
 
 #home:hover{
     color: #4f351c;
@@ -75,11 +83,13 @@ nav a:hover{
   padding: 30px; 
   width: 100%;
   box-sizing: border-box;
+  margin-bottom: 16px; 
+
 } 
 
 button { 
   display: inline-block; 
-  background: transparent;
+  background-color: #3d4e36;
   border: 2px solid #FDF7F2; 
   border-radius: 50px;       
   padding: 10px 20px;        
@@ -92,7 +102,59 @@ button a {
 }
 
 button:hover{
-    background-color: #4f351c;
+    background-color: #7da88f;
+}
+
+.future, .age, .where {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    height: 600px; 
+    gap: 0px;
+    margin: 0px; 
+}
+
+.future div, 
+.age div, 
+.where div {
+  flex: 1;
+  width: 50%;
+}
+
+.blocks div{
+    /* padding: 10px 0px; */
+    margin-bottom: 10px; 
+    align-items: stretch;
+    
+}
+
+/* .blocks img{
+    height: 100%;
+    object-fit: cover;
+} */
+
+.futuretxt, .agetxt, .wheretxt {
+        background-color: #4f351c;
+        flex-direction: column;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        box-sizing: border-box;       
+}
+
+footer{
+      background-color: #2d1e10; 
+      padding: 20px;
+      text-align: center;
+}
+
+.block-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
 
 
